--- a/styles.css
+++ b/styles.css
@@ -133,11 +133,8 @@ input {
   border-radius: 5px;
 }
 
-/* input:invalid {
-  border-color: rgb(215, 13, 13);
-} */
 input:valid {
-  border-color: rgb(0, 0, 0);
+  /* border-color: rgb(0, 0, 0); */
 }
 
 ul {
@@ -476,5 +473,68 @@ label {
   .form-labels input {
     width: 73%;
     height: 1.87em;
+  }
+}
+
+
+/* Adjustments for width of 775px */
+@media (max-width: 775px) {
+
+  /* Adjust the image width */
+  #full-image {
+    height: 100vh;
+    width: 29vw;
+  }
+
+  .banner {
+    top: 22.5em;
+    height: 6.9em;
+
+  }
+
+  .title-text {
+    left: 3.6em;
+    top: -3em;
+    font-size: 30px;
+  }
+
+  #logo-image {
+    width: 80%;
+    top: -2.9em;
+    z-index: -1;
+  }
+
+  /* Adjust the form width */
+  #information {
+    height: 97.4%;
+    width: 71vw;
+  }
+
+  /* Width of the paragraph in section 1 */
+  #paragraph-one {
+    max-width: 74%;
+    font-size: 16px;
+  }
+
+  /* Start of last name */
+  .last-name {
+    left: 55.5%;
+  }
+
+  /* Start of phone-number */
+  .phone-number {
+    left: 55.5%;
+  }
+
+  /* Start of password-confirm */
+  .password-confirm {
+    left: 55.5%;
+  }
+
+  /* width & height of form inputs */
+  .form-labels input {
+    width: 61%;
+    height: 1.87em;
+    font-size: medium;
   }
 }
